Updated demo script to work alongside hudrec

--- a/cfg/overrides/autoexec.cfg
+++ b/cfg/overrides/autoexec.cfg
@@ -18,6 +18,7 @@ hud_saytext_time 2
 voice_modenable 0
 volume 0.06
 
+
 //Damage Pitch
 tf_dingaling_pitchmindmg 120
 tf_dingaling_pitchmaxdmg 30
@@ -25,6 +26,7 @@ tf_dingaling_volume 2
 tf_dingaling_lasthit_volume 2
 tf_dingaling_lasthit_pitchmindmg 110
 tf_dingaling_lasthit_pitchmaxdmg 30
+
 
 //Mouse Stuff
 sensitivity 2.0
@@ -36,28 +38,10 @@ m_mouseaccel2 0
 m_rawinput 1
 zoom_sensitivity_ratio .793471
 
+
 //Misc Aliases
 alias hr "vgui_cache_res_files 0;hud_reload;toggle mat_aaquality;vgui_cache_res_files 1"
 
-//MasterComfig Null Movement
-bind W "+forward;cd+"
-bind A "+moveleft;cd+"
-bind S "+back;cd+"
-bind D "+moveright;cd+"
-bind SHIFT "+duck;cd+"
-
-alias +mf "-back;+forward;alias cf +forward"
-alias +mb "-forward;+back;alias cb +back"
-alias +ml "-moveright;+moveleft;alias cl +moveleft"
-alias +mr "-moveleft;+moveright;alias cr +moveright"
-alias -mf "-forward;cb;alias cf"
-alias -mb "-back;cf;alias cb"
-alias -ml "-moveleft;cr;alias cl"
-alias -mr "-moveright;cl;alias cr"
-alias cf
-alias cb
-alias cl
-alias cr
 
 //Crosshair disco
 alias cd+ "cd1"
@@ -74,15 +58,19 @@ alias cd10 "cl_crosshair_red 191;cl_crosshair_green 128;cl_crosshair_blue 255;al
 alias cd11 "cl_crosshair_red 255;cl_crosshair_green 128;cl_crosshair_blue 255;alias cd+ cd12"
 alias cd12 "cl_crosshair_red 255;cl_crosshair_green 128;cl_crosshair_blue 191;alias cd+ cd1"
 
+bind W "+forward;cd+"
+bind A "+moveleft;cd+"
+bind S "+back;cd+"
+bind D "+moveright;cd+"
+bind SHIFT "+duck;cd+"
+
+
 //Scoreboard
-bind tab +sb
 alias +sb "+score;net_graph 1"
 alias -sb "-score;net_graph 0"
 
-//SpecGUI
-//bind F +teamgui
-//alias "+teamgui" "showpanel specgui"
-//alias "-teamgui" "hidepanel specgui"
+bind tab +sb
+
 
 //Loadouts
 bind f1 "load_itempreset 0"
@@ -90,29 +78,30 @@ bind f2 "load_itempreset 1"
 bind f3 "load_itempreset 2"
 bind f4 "load_itempreset 3"
 
+
 //Demo Settings
-ds_enable 0								//Only record demos manually
-ds_autodelete 0							//Only delete demos manually
-ds_notify 2								//Demo notification appears on your hud
-ds_prefix "peaches"						//The prefix of demo files
+ds_enable 0					//Only record demos manually
+ds_autodelete 0				//Only delete demos manually
+ds_notify 2					//Demo notification appears on your hud
+ds_prefix "peaches"			//The prefix of demo files
 
-//Demo Reminder
-bind CTRL "+demo1"
-bind Z "demo2"
-bind ALT "+dmod"
+//Demo prefix binds
+bind CTRL "+dmod"
+bind O "dkey1"
+bind P "dkey2"
 
-alias +nopress1 ""						//Default function of the key bound to "demo1"
-alias -nopress1 ""
-alias +demo1 "+nopress1"
-alias -demo1 "-nopress1"
-alias press1 "official"					//Alternate function of the key bound to "demo 1" - See "official" alias below
-alias nopress2 "voice_menu_1"			//Default function of the key bound to "demo2"
-alias press2 "scrim"					//Alternate function of the key bound to "demo 1" - See "scrim" alias below
-alias +dmod "alias +demo1 press1; alias demo2 press2"            
-alias -dmod "alias +demo1 +nopress1; alias -demo1 -nopress1; alias demo2 nopress2"        
+alias +dmod "alias dkey1 dmod1; alias dkey2 dmod2"
+alias -dmod "alias dkey1 dunmod1; alias dkey2 dunmod2"
 
-alias official "ds_prefix "official"; ds_record; say_team "Recording Demo""        //Changes demo file prefix to "official", starts demo recording, and announces recording in team chat.
-alias scrim "ds_prefix peaches; ds_record"                        					//Sets demo file name prefix to prefered general setting and starts demo.
+alias dunmod1 "cl_trigger_first_notification"
+alias dunmod2 "vgui_drawtree 1"
+alias dmod1 "ds_prefix official; ds_status"
+alias dmod2 "ds_prefix peaches; ds_status"
+
 
 // Exec Confirmation
-Echo "Override config executed"
+echo; echo
+echo "========================"
+echo "Override config executed"
+echo "========================"
+echo; echo
