Updated for Summer 2025

--- a/cfg/config.cfg
+++ b/cfg/config.cfg
@@ -15,6 +15,7 @@ bind "b" "lastdisguise"
 bind "c" "voice_menu_3"
 bind "d" "+moveright;cd+"
 bind "e" "voicemenu 0 0"
+bind "f" "+moveright;cd+"
 bind "g" "+use_action_slot_item"
 bind "h" "show_quest_log"
 bind "i" "say"
@@ -23,9 +24,9 @@ bind "k" "cl_decline_first_notification"
 bind "l" "dropitem"
 bind "m" "show_matchmaking"
 bind "n" "+voicerecord"
-bind "o" "cl_trigger_first_notification"
-bind "p" "vgui_drawtree 1"
-bind "q" "voicemenu 0 1; ds_status"
+bind "o" "dkey1"
+bind "p" "dkey2"
+bind "q" "voicemenu 0 1"
 bind "r" "+reload"
 bind "s" "+back;cd+"
 bind "t" "disguiseteam"
@@ -34,7 +35,7 @@ bind "v" "+voicerecord"
 bind "w" "+forward;cd+"
 bind "x" "voice_menu_2"
 bind "y" "+inspect"
-bind "z" "demo2"
+bind "z" "voice_menu_1"
 bind "KP_INS" "loopKey"
 bind "KP_END" "join_class Scout"
 bind "KP_DOWNARROW" "join_class Soldier"
@@ -57,6 +58,7 @@ bind "`" "toggleconsole"
 bind "," "changeclass"
 bind "." "changeteam"
 bind "/" "+movedown"
+bind "\" "cl_trigger_first_notification"
 bind "=" "kill"
 bind "ENTER" "+taunt"
 bind "SPACE" "+jump"
@@ -70,8 +72,7 @@ bind "PGUP" "+lookup"
 bind "PGDN" "+lookdown"
 bind "PAUSE" "pause"
 bind "SHIFT" "+duck;cd+"
-bind "ALT" "+dmod"
-bind "CTRL" "+demo1"
+bind "CTRL" "+dmod"
 bind "F1" "load_itempreset 0"
 bind "F2" "load_itempreset 1"
 bind "F3" "load_itempreset 2"
@@ -95,10 +96,9 @@ replay_replayeditor_rewindmsgcounter "1"
 cl_rumblescale "1"
 cl_interp_ratio "1"
 cl_interp ".015"
+r_lightmap_bicubic_set "1"
 r_drawtracers_firstperson "0"
 cl_showhelp "0"
-hud_achievement_description "0"
-hud_achievement_count "0"
 cl_chatfilter_version "1"
 cc_linger_time "4.010000"
 cc_predisplay_time "0"
@@ -153,7 +153,7 @@ cl_notifications_move_time ".1"
 tf_time_loading_item_panels ".0005"
 tf_store_stamp_donation_add_timestamp "1715138457"
 hud_classautokill "0"
-cl_spec_mode "5"
+cl_spec_mode "6"
 sixense_sensitivity_level "2"
 sixense_zoom_momentary_time "3"
 sixense_mouse_sensitivity "2"
@@ -183,6 +183,7 @@ ds_prefix "peaches"
 ds_min_streak "10.000000"
 ds_kill_delay "45.000000"
 ds_log "0"
+ds_sound "0"
 ds_notify "2"
 ds_screens "0"
 tf_particles_disable_weather "1"
@@ -199,12 +200,10 @@ tf_dingaling_lasthit_volume "1.000000"
 tf_dingaling_lasthit_pitchmindmg "110"
 tf_dingaling_lasthit_pitchmaxdmg "30"
 tf_dingalingaling_repeat_delay ".001"
-hud_achievement_count_engineer "0"
 cl_crosshair_red "191"
-cl_crosshair_green "128"
-cl_crosshair_blue "255"
+cl_crosshair_green "255"
+cl_crosshair_blue "128"
 cl_crosshair_scale "12"
-cl_hud_killstreak_display_time "2"
 tf_contract_progress_show "2"
 tf_contract_competitive_show "0"
 tf_recent_achievements "1434,1605,1531,1306,1512,1530"
@@ -215,10 +214,10 @@ tf_training_has_prompted_for_forums "1"
 tf_training_has_prompted_for_options "1"
 tf_training_has_prompted_for_loadout "1"
 cl_ask_bigpicture_controller_opt_out "1"
-cl_mainmenu_operation_motd_start "2024-12-04 21:33:53"
+cl_mainmenu_operation_motd_start "2025-04-21 21:32:03"
 cl_mainmenu_updateglow "0"
 cl_promotional_codes_button_show "0"
-tf_last_store_pricesheet_version "21725"
+tf_last_store_pricesheet_version "55633"
 cl_mvm_wave_status_visible_during_wave "1"
 tf_simple_disguise_menu "0"
 tf_hud_notification_show_count_kart_controls "3"
@@ -233,7 +232,7 @@ tf_item_inspect_model_auto_spin "0"
 tf_colorblindassist "1"
 tf_mm_custom_ping_enabled "1"
 tf_mm_custom_ping "50"
-tf_party_join_request_mode "1"
+tf_party_join_request_mode "2"
 tf_mvm_tabs_discovered "1"
 tf_explanations_charinfo_armory_panel "1"
 tf_explanations_charinfopanel "1"
@@ -262,18 +261,18 @@ tf_sniper_fullcharge_bell "1"
 cl_crosshairalpha "255.000000"
 tf_explanations_discardpanel "1"
 tf_explanations_store "1"
-sv_skyname "sky_tf2_04"
+sv_skyname "sky_dustbowl_01"
 tf_skillrating_update_interval "120"
 replay_voice_during_playback "1"
 snd_surround_speakers "2"
-volume "0.06"
+volume "0.05"
 snd_musicvolume "0"
-snd_mixahead ".0626"
+snd_mixahead ".0137"
 snd_ducktovolume "0.99"
 dsp_volume "1"
 voice_scale "1.000000"
 name "peaches"
-password "superSimplePasswordForMyBoy"
+password "weirdscience"
 sv_unlockedchapters "0"
 cl_timeout "60"
 cl_logofile "materials/vgui/logos/spray.vtf"
@@ -287,12 +286,14 @@ bugreporter_uploadasync "1"
 rate "786432"
 cl_cmdrate "66"
 cl_updaterate "66"
-net_maxroutable "1200"
 cl_allowupload "0"
 engine_no_focus_sleep "1"
+mat_forceaniso "4"
 mat_picmip "-10"
 mat_monitorgamma "2"
 mat_antialias "1"
+mat_aaquality "1"
+r_shadowrendertotexture "1"
 mat_managedtextures "0"
 joy_axis_deadzone "0"
 mat_hdr_level "0"
