--- a/cfg/overrides/autoexec.cfg
+++ b/cfg/overrides/autoexec.cfg
@@ -2,13 +2,12 @@
 sv_cheats 1
 cl_crosshair_scale 12
 viewmodel_fov 80
-sv_allow_point_servercommand always
 alias motion_blur motion_blur_refract
 tf_hud_target_id_alpha 0
 r_drawtracers_firstperson 0
-cl_notifications_show_ingame 0
-r_rimlight 1
 mat_specular 0
+cl_notifications_show_ingame 0
+sv_allow_point_servercommand always
 con_filter_text_out particle
 con_filter_enable 1
 cl_autorezoom 0
@@ -16,7 +15,24 @@ cl_mainmenu_operation_motd_start 0
 tf_scoreboard_mouse_mode 2
 hud_saytext_time 2
 voice_modenable 0
-volume 0.06
+volume 0.05
+
+
+//Comfig Overrides
+//Texture Filter
+mat_filterlightmaps 1
+
+//Lighting
+r_ambientboost 1
+r_lightaverage 1
+r_worldlightmin .0002
+r_lightcache_zbuffercache 0 //testing
+r_rimlight 1
+
+//Shadows
+r_shadowrendertotexture 1
+cl_blobbyshadows 0
+r_shadowmaxrendered 11
 
 
 //Damage Pitch
@@ -40,7 +56,7 @@ zoom_sensitivity_ratio .793471
 
 
 //Misc Aliases
-alias hr "vgui_cache_res_files 0;hud_reload;toggle mat_aaquality;vgui_cache_res_files 1"
+alias hr "vgui_cache_res_files 0;hud_reloadscheme;toggle mat_aaquality;vgui_cache_res_files 1"
 
 
 //Crosshair disco
@@ -63,6 +79,10 @@ bind A "+moveleft;cd+"
 bind S "+back;cd+"
 bind D "+moveright;cd+"
 bind SHIFT "+duck;cd+"
+
+bind R "+reload"
+bind Q "voicemenu 0 1"
+bind E "voicemenu 0 0"
 
 
 //Scoreboard
@@ -91,12 +111,14 @@ bind O "dkey1"
 bind P "dkey2"
 
 alias +dmod "alias dkey1 dmod1; alias dkey2 dmod2"
-alias -dmod "alias dkey1 dunmod1; alias dkey2 dunmod2"
+alias -dmod "alias dkey1 dunmod1; alias dkey2 dunmod2; ds_status"
 
+alias dkey1 "dunmod1"
+alias dkey2 "dunmod2"
 alias dunmod1 "cl_trigger_first_notification"
 alias dunmod2 "vgui_drawtree 1"
-alias dmod1 "ds_prefix official; ds_status"
-alias dmod2 "ds_prefix peaches; ds_status"
+alias dmod1 "ds_prefix official"
+alias dmod2 "ds_prefix peaches"
 
 
 // Exec Confirmation
