--- a/cfg/overrides/modules.cfg
+++ b/cfg/overrides/modules.cfg
@@ -1,17 +1,16 @@
 bandwidth=6.0Mbps
 download=mapsonly
 lod=ultra
-lighting=high
+lighting=low
 lighting_ex=high
-shadows=off
+shadows=medium
 effects=low
 water=medium
 particles=low
 post_processing=off
 pyrovision=low
 anti_aliasing=off
-//texture_filter=aniso8x
-texture_filter=blocky
+texture_filter=aniso4x
 characters=low
 decals=off
 decals_models=off
@@ -24,7 +23,7 @@ ragdolls=off
 jigglebones=force_on
 sheens_speed=medium
 sheens_tint=full
-textures=ultra
+texture_quality=ultra
 ropes=off
 fpscap=unlimited
 hud_player_model=on
